--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "d3-selection": "^2.0.0",
+    "d3-zoom": "^2.0.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/d3-selection": "^2.0.0",
+    "@types/d3-zoom": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "@vue/cli-plugin-babel": "~4.5.0",
